FULL-2017-11-12_21-37/jobs/java/builds/9/log
Started by user [8mha:////4BM9UWfXaeIlwj9SRCgwFEzOGAiKkRNXYc3NhmcRAmACAAAAnR+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAyeEgZB/dLi1CL97NTijMSyytSiokQAoW5rVMYAAAA=[0mKeshav Yerra
[EnvInject] - Loading node environment variables.
Building in workspace /var/jenkins_home/workspace/java
 > git rev-parse --is-inside-work-tree # timeout=10
Fetching changes from the remote Git repository
 > git config remote.origin.url https://github.com/keshavyerra/OTD # timeout=10
Fetching upstream changes from https://github.com/keshavyerra/OTD
 > git --version # timeout=10
 > git fetch --tags --progress https://github.com/keshavyerra/OTD +refs/heads/*:refs/remotes/origin/*
 > git rev-parse refs/remotes/origin/master^{commit} # timeout=10
 > git rev-parse refs/remotes/origin/origin/master^{commit} # timeout=10
Checking out Revision 4073467e9811186ccdc9c6e7806a2dda2b9b8ef3 (refs/remotes/origin/master)
 > git config core.sparsecheckout # timeout=10
 > git checkout -f 4073467e9811186ccdc9c6e7806a2dda2b9b8ef3
Commit message: "Add files via upload"
 > git rev-list 4073467e9811186ccdc9c6e7806a2dda2b9b8ef3 # timeout=10
[java] $ /bin/sh -xe /tmp/jenkins767782575584013364.sh
+ javac -cp .;/var/jenkins_home/workspace/java/OTDConfigAdapter.jar;/var/jenkins_home/workspace/java/snakeyaml-1.8.jar; Test.java
Test.java:2: error: package com.sherwin.profile does not exist
import com.sherwin.profile.ProfileBuilder;
                          ^
Test.java:3: error: package com.sherwin.build.bean does not exist
import com.sherwin.build.bean.Build;
                             ^
Test.java:4: error: package com.sherwin.otd.commands does not exist
import com.sherwin.otd.commands.ConfigurationCommands;
                               ^
Test.java:13: error: cannot find symbol
		ProfileBuilder test = new ProfileBuilder();
		^
  symbol:   class ProfileBuilder
  location: class Test
Test.java:13: error: cannot find symbol
		ProfileBuilder test = new ProfileBuilder();
		                          ^
  symbol:   class ProfileBuilder
  location: class Test
Test.java:14: error: cannot find symbol
	    Build one = test.getBuildProperties();
	    ^
  symbol:   class Build
  location: class Test
6 errors
Build step 'Execute shell' marked build as failure
Finished: FAILURE
